[package]
name = "rumqttc-async-std"
version = "0.5.0"
description = "An efficient and robust mqtt client for your connected devices"
license = "Apache-2.0"
repository = "https://github.com/Frans-Willem/rumqttc-async-std"
authors = ["Frans-Willem Hardijzer"]
edition = "2018"
keywords = ["mqtt", "iot", "coap", "http"]
categories = ["network-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
websocket = ["async-tungstenite", "ws_stream_tungstenite"]

[dependencies]
async-std = "1.6"
async-io = "1.0"
futures = "0.3"
bytes = "1.0"
webpki = "0.21"
async-tungstenite = { version = "0.11.0", features = ["async-std-runtime", "async-tls"], optional = true }
ws_stream_tungstenite = { version = "0.4.0", optional = true }
async-tls = "0.11"
rustls = "0.19"
mqttbytes = "0.2"
pollster = "0.2"
async-channel = "1.5"
log = "0.4"
thiserror = "1.0.21"
http = "^0.2"
pin-project = "1"

[dev-dependencies]
pretty_env_logger = "0.4"
color-backtrace = "0.4"
crossbeam-channel = "0.5"
serde = {version = "1", features = ["derive"]}
envy = "0.4"
jsonwebtoken = "7"
matches = "0.1.8"
rustls = "0.19"
rustls-native-certs = "0.5.0"
